[project]
name = "kingfisher-process"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN", "COM", "EM",
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191", "D206", "Q000", "Q001", "Q002", "Q003", "ISC001",
  "D203", "D212",  # ignore incompatible rules
  "D200",  # documentation preferences
  "C901", "PLR091",  # complexity preferences
  "D1",  # docstrings
  "PTH",  # pathlib
  "A002",  # compile builtin
  "ARG001", "ARG002", "RUF012",  # Django
  "N818",  # AlreadyExists error
  "PLW2901",  # release_or_record overridden
  "S104",  # Docker ALLOWED_HOSTS
  "S324",  # md5 hash
  "TRY003",  # Django command errors
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["copyright"]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["INP001"]  # no __init__.py file
"*/management/commands/*" = ["INP001"]  # no __init__.py file
"*/migrations/*" = ["E501"]
"tests/*" = [
  "D",  # docstring
  "PT",  # unittest
  "ARG002",  # mocks
  "BLE001",  # Exception
  "PLR2004",  # Magic value used
  "S101",  # assert
]

[tool.coverage.run]
omit = ['*/migrations/*']
